--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.11.1",
     "@typescript-eslint/utils": "^5.36.1",
     "eslint-module-utils": "^2.7.4"
   },
