--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ecmascript"
   ],
   "devDependencies": {
-    "@types/eslint": "^8.4.5",
+    "@types/eslint": "^9.6.1",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.15",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -35,13 +35,16 @@
     "jest-junit": "^14.0.1",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "typescript-eslint": "^8.8.0"
   },
   "dependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.11.1",
     "@typescript-eslint/utils": "^5.36.1",
-    "eslint-module-utils": "^2.7.4"
+    "eslint-module-utils": "^2.7.4",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.10.0"
   },
   "homepage": "https://github.com/CodelyTV/eslint-plugin-hexagonal-architecture#readme",
   "repository": {
