--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "A plugin that helps you to enforce hexagonal architecture best practises.",
   "main": "dist/src/index.js",
   "scripts": {
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . --flag unstable_ts_config",
+    "lint:fix": "eslint . --flag unstable_ts_config --fix ",
     "test": "jest -c jest.config.ts",
     "build": "tsc"
   },
   "peerDependencies": {
-    "eslint": "*"
+    "eslint": "^9.11.1"
   },
   "author": "Codely (www.codely.com)",
   "license": "SEE LICENCE IN LICENCE",
@@ -26,13 +26,15 @@
   ],
   "devDependencies": {
     "@types/eslint": "^9.6.1",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.15",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "eslint-config-codely": "^1.1.0",
     "jest": "^28.1.3",
     "jest-junit": "^14.0.1",
+    "jiti": "^2.1.2",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
@@ -41,7 +43,7 @@
   "dependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.11.1",
-    "@typescript-eslint/utils": "^5.36.1",
+    "@typescript-eslint/utils": "^8.8.0",
     "eslint-module-utils": "^2.7.4",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.10.0"
